# SynergyXintrextro

./: .env.example  .gitignore  Dockerfile.unified  IMPLEMENTATION_SUMMARY.md  Intrextro_modal_fusion.py  Makefile  OQAIS.py  README.md  README_ROUTING.md  README_UNIFIED.md  SynQAI.py  bench_pure_synergy.py  cognitive_loop.py  config.yaml  creative_problem_solving.py  demo_kernel_route.py  demo_unified.py  docker-compose.unified.yaml  docker-compose.yaml  env.example  eslint.config.mjs  expanded_intrextro_learning.py  intrextro_adapter.py  intrextro_engine.py  intrextro_kernel_adapters.py  intrextro_learning.py  intrextro_learning_framework.py  intrextro_meta_learning_optimizer_enhanced.py  intrextro_model_training.py  intrextro_synergyAI.py  intrextro_synergy_base.py  kernel_config.py  kernel_router.py  kernels.yaml  main (1).py  main.py  metrics.txt  mirror_persona_idea.py  nlp.py  omniscript.py  (+10 more)
.github/: copilot-instructions.md
.github/workflows/: quality-gate.yml
docs/: architecture.md  benchmarks.md
docs/bench/: code_analysis.md  text_analysis.md
logs/: .gitignore
reports/: .gitignore
src/: index.ts
src/__tests__/: adaptive-system.test.ts  metrics-collector.test.ts
src/collaboration/: hub.ts
src/core/: adaptive-system.ts
src/metrics/: collector.ts
src/quality/: controller.ts
synergyx/: __init__.py  chat.py
synergyx/benchmarks/: __init__.py  __main__.py  run.py
synergyx/config/: manager.py
synergyx/core/: __init__.py  azure_provider.py  engine.py  huggingface_provider.py  manager.py  models.py  ollama_provider.py  openai_provider.py  providers.py
synergyx/interfaces/: __init__.py  api.py  cli.py
synergyx/memory/: __init__.py  conversation.py
synergyx/rag/: __init__.py  simple_rag.py
synergyx/tools/: __init__.py  base.py  code_analysis.py  data_analysis.py  field_observation.py  introspective_integration.py  rag_tools.py  registry.py  text_analysis.py  web_fetcher.py
tests/: conftest.py  test_core.py  test_new_providers.py  test_tools.py
